--- a/angularflexapp/src/app/cards/cards.component.html
+++ b/angularflexapp/src/app/cards/cards.component.html
@@ -4,7 +4,6 @@
     <ng-template #showMobile>
       <img  mat-card-avatar src='assets/avi2.PNG'/>
     </ng-template>
-
     <mat-card-title>{{cardInfo.title}}</mat-card-title>
     <mat-card-subtitle>
       <mat-chip color='primary' selected>{{cardInfo.link_flair_text}}</mat-chip> | 
@@ -13,8 +12,8 @@
   </mat-card-header>
   <p>{{cardInfo.selftext}}</p>
   <mat-card-actions>
-    <span> <a [href]="'http://www.reddit.com/cardInfo.permalink'">Link</a></span> | 
-    <span> Score: {{cardInfo.score}}</span> |
+    <span> <a target="_blank" href="http://www.reddit.com/{{cardInfo.permalink}}">Link</a></span> | 
+    <span matBadge='{{cardInfo.score}}'> Score</span><mat-divider [vertical]='true'></mat-divider>
     <span> Upvote: {{cardInfo.ups}}</span> |
     <span>Downvote: {{cardInfo.downs}}</span> |
     <span>Total Comments: {{cardInfo.num_comments}}</span>
